fix navigation bar not to cover page contents when it goes multi-line - make navbar static - drop navbar's margin-bottom - drop doby's padding-top - put the forkme image after navbar in the code, so it's also not covered by it - remove the top value of the image

--- a/_include/css/mamedev.css
+++ b/_include/css/mamedev.css
@@ -3,10 +3,6 @@ body {
     height: 100%;
 }
 
-body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-}
-
 .img-center {
 	margin: 0 auto;
 }
